Task ASINT-1530: Support package managers
